--- a/second-part/scss/base/_base.scss
+++ b/second-part/scss/base/_base.scss
@@ -67,168 +67,14 @@
 	    color: $color-dark;
 	}
 
-	.page-header {
-	    margin-top: 0;
-	    h1,
-	    h2,
-	    h3,
-	    h4,
-	    h5,
-	    h6 {
-	        margin-bottom: 0;
-	        margin-top: 0;
-	    }
+	.color-pgrey {
+	    color: $color-pgrey;
 	}
 
-	.thumbnail {
-	    border: none;
-	    padding: 0px; // caption as wrapper
-	    .caption {
-	        padding: 0px;
-	        .media-category-name {
-	            margin-bottom: 0px;
-	            color: $color-info !important
-	        }
-	        .media-heading {
-	            padding: 10px 0;
-	            a {
-	                color: $color-dark;
-	                &:hover {
-	                    .media-category-name {
-	                        color: $color-primary
-	                    }
-	                }
-	            }
-	        }
-	        h1.media-heading {
-	            padding: 15px 0;
-	        }
-	    } // a link as wrapper
-	    a {
-	        &:hover {
-	            .caption {
-	                .media-heading {
-	                    color: $color-primary;
-	                }
-	            }
-	        }
-	    }
+	.color-social-grey {
+	    color: $color-social-grey;
 	}
 
-	.thumbnail-1 {
-	    a {
-	        div.image-wrapper {
-	            max-height: 150px; // aspec ratio 3:2
-	            overflow-y: hidden;
-	        }
-	    }
-	}
-
-	.list-inline {
-	    list-style: none;
-	    display: inline;
-	}
-
-	.list-type-none {
-	    list-style: none
-	}
-
-	.list-group {
-	    .list-group-item {
-	        &:hover {
-	            background-color: transparent;
-	            .list-group-item-heading {
-	                background-color: transparent;
-	                color: $color-primary;
-	            }
-	        }
-	        &:focus {
-	            background-color: transparent;
-	        }
-	        .list-group-item-heading {
-	            &:hover {
-	                background-color: transparent;
-	                color: $color-primary;
-	                text-decoration: none;
-	            }
-	        }
-	    }
-	}
-
-	.media {
-	    .media-left {
-	        a {
-	            cursor: normal;
-	            &:hover {
-	                text-decoration: none;
-	            }
-	        }
-	    }
-	    .media-body {
-	        .media-category-name {
-	            margin: $margin-xs 0;
-	            font-weight: bolder;
-	            a {
-	                color: $color-primary;
-	                &:hover {
-	                    cursor: pointer;
-	                }
-	                &:hover,
-	                &focus {
-	                    color: $color-dark;
-	                    text-decoration: none;
-	                }
-	            }
-	        }
-	        .media-heading {
-	            a {
-	                color: $color-dark;
-	                font-weight: 100;
-	                &:hover {
-	                    cursor: pointer;
-	                }
-	                &:hover,
-	                &focus {
-	                    color: $color-primary !important;
-	                    text-decoration: none;
-	                }
-	            }
-	        }
-	    }
-	}
-
-	.page-header.separator {
-	    margin-top: 0;
-	    margin-bottom: 30px;
-	}
-
-	.image-caption,
-	.body-image-caption {
-	    font-size: 12px;
-	    color: $color-grey;
-	    margin-bottom: 15px;
-	    text-align: center;
-	    line-height: 130% !important;
-	}
-
-	.contributor-photo {
-	    height: $contributor-photo-xs;
-	    width: $contributor-photo-xs;
-	    border-radius: 50%;
-	}
-
-	.social-sharing {
-	    padding-left: 0;
-	    li {
-	        margin-bottom: 5px;
-	    }
-	}
-
-	.social-sharing.affix {
-	    top: 100px;
-	    position: fixed;
-	}
-
-	.social-sharing.affix-bottom {
-	    position: relative;
+	.color-light-grey {
+	    color: $color-light-grey;
 	}
