--- a/second-part/scss/base/_variables.scss
+++ b/second-part/scss/base/_variables.scss
@@ -20,8 +20,8 @@
 	/* BACKGROUND AND COLOR VARIABLE  */
 
 	$bg-light: #EFEFEF;
-	$color-primary: #169776;
-	$color-secondary: #13876a;
+	$color-primary: #dad7d2;
+	$color-secondary: #dad7d2;
 	$color-yellow: #d8d6a8; // $color-primary: #3276b2;
 	$color-success: #189d0e;
 	$color-info: #3283ca;
@@ -29,17 +29,13 @@
 	$color-danger: #ca0813;
 	$color-light: #eee;
 	$color-dark: #333;
-	$color-grey: #999;
-	$color-dark-grey: #777;
+	$color-light-grey: #a9a8a5;
+	$color-grey: #9a9895;
+	$color-pgrey: #454545;
+	$color-social-grey: #454545;
+	$color-dark-grey: #454545;
 	$color-white: #FFF;
 	/* END OF COLOR VAR */
-
-	/* SIDEBAR */
-
-	$most-popular-rank-height: 30px;
-	$news-topic-height: 30px;
-	$most-popular-rank-width: 15px;
-	/* END OF SIDEBAR */
 
 	/* IMAGES */
 
