--- a/second-part/scss/modules/_typography.scss
+++ b/second-part/scss/modules/_typography.scss
@@ -21,3 +21,32 @@
 	h4 { line-height : 100% }
 	h5 { line-height : 100% }
 	h6 { line-height : 100% }
+
+	// Extra small devices (portrait phones, less than 576px)
+	@media (max-width: 575.98px) {
+		h1 { font-size: 48pt }
+		h2 { font-size: 32pt }
+		h3 { font-size: 24pt }
+		h4 { font-size: 18pt }
+		h5 { font-size: 14pt }
+		h6 { font-size: 13pt }
+	}
+
+	// Small devices (landscape phones, 576px and up)
+	@media (min-width: 576px) and (max-width: 767.98px) {}
+
+	// Medium devices (tablets, 768px and up)
+	@media (min-width: 768px) and (max-width: 991.98px) {}
+
+	// Large devices (desktops, 992px and up)
+	@media (min-width: 992px) and (max-width: 1199.98px) {}
+
+	// Extra large devices (large desktops, 1200px and up)
+	@media (min-width: 1200px) {
+		h1 { font-size: 60pt }
+		h2 { font-size: 48pt }
+		h3 { font-size: 32pt }
+		h4 { font-size: 24pt }
+		h5 { font-size: 18pt }
+		h6 { font-size: 14pt }
+	}
