--- a/second-part/scss/base/_responsive.scss
+++ b/second-part/scss/base/_responsive.scss
@@ -2,19 +2,20 @@
 @media (max-width: 575.98px) {
     .nav-menu-overlay {
         .container-default {
-            margin: 0px;
             margin-top: 30px;
             padding: 25px;
             .list-menu {
+                margin: 0px;
+                padding-top: 30px;
                 text-align: center;
             }
         }
     }
     .carousel-inner {
         max-height: 300px;
-        img {
-            height: auto;
-            width: 100%;
+        .carousel-item {
+            background-size: 100% auto;
+            background-repeat: no-repeat;
         }
     }
     .container-featured-products {
